# sekha

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_idea.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/00-setup-naming-gate/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md
.planning/phases/01-storage-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/04-pretool-hook/: 04-01-SUMMARY.md
.planning/phases/05-mcp-server/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-cli-install/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md
.planning/phases/07-polish-docs-release/: 07-01-SUMMARY.md
docs/: hook-integration-test.md  release.md  roadmap-v1.1.md
docs/blog/: index.html
docs/launch/: blog-post.md  discord.md  hn.md  reddit.md  twitter.md
examples/rules/: block-drop-table.md  block-force-push-main.md  block-rm-rf.md  warn-no-assumptions.md  warn-no-tests-before-commit.md
src/cyrus/: __init__.py  _init.py  _rulesutil.py  _searchutil.py  cli.py  hook.py  rules.py  search.py  storage.py  tools.py
src/sekha/: __init__.py  _cliutil.py  _init.py
tests/: test_cli.py  test_cliutil.py  test_doctor.py  test_hook_bench.py  test_hookutil.py  test_init.py  test_logutil.py  test_paths.py  test_placeholder.py  test_rules.py  test_search_bench.py  test_searchutil.py  test_server.py  test_tools.py
tests/fixtures/bench_rules/: block-bash.md  block-noop.md  warn-noop.md
tests/fixtures/hook_events/: bash_rm_rf.json  read_file.json  write_file.json
tests/fixtures/rules/: block-curl-bash.md  block-delete-branch.md  block-drop-table.md  block-eval-string.md  block-force-push.md  block-rm-rf.md  block-sudo.md  invalid-bad-regex.md  invalid-bad-severity.md  invalid-missing-severity.md  warn-git-reset.md  warn-no-tests.md  warn-todo-comments.md
